Squashed release-1.3.16-pre04
commit de9c2a61e8a9b5c73877c860db18de91eaf0e77f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 20 17:53:12 2015 +0200

    rename method (typo)

commit 7d4d462254db98f3089331dad25248394940448d
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 17:52:04 2015 +0200

    Save MAX_WIDTH along with MAX_WIDTH_QUANTITY and MIN_WIDTH along with
    MIN_WIDTH_QUANTITY for backward compatibility

commit 156aa578160fc6a50a91f88c2624e5ab11c0f054
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 20 15:56:00 2015 +0200

    remove NodeWidth action from menus

commit 885cac0d16be0b7834349d7e6420e502c220b783
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Oct 20 15:46:11 2015 +0200

    QuantityProperty for node widths
    # Conflicts:
    #	freeplane/resources/xml/mindmapmode.generic.xml
    #	freeplane/resources/xml/mindmapmoderibbon.xml
    #	freeplane/resources/xml/stylemode.generic.xml
    #	freeplane/resources/xml/stylemodemenu.xml
    #	freeplane/src/main/java/org/freeplane/view/swing/map/ContentSizeCalculator.java
    #	freeplane/src/org/freeplane/features/nodestyle/NodeStyleBuilder.java
    #	freeplane/src/org/freeplane/features/nodestyle/mindmapmode/NodeSizeDialog.java
    #	freeplane/src/org/freeplane/features/nodestyle/mindmapmode/NodeWidthAction.java
    #	freeplane/src/org/freeplane/features/styles/mindmapmode/StyleEditorPanel.java

commit 0e4d20ba300d757033da955359a6ef977287aacb
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 14:33:20 2015 +0200

    QuantityProperty for node widths

commit 3404320817a10d7f83cec3e13b474150d1c0c932
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 13:13:27 2015 +0200

    Use Quantity<LengthUnits> in NodeSizeModel

commit 88945313d74b139f7d5caa0700ba1a6fdce393b8
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 12:53:46 2015 +0200

    Convert Quantity to and from String

commit 8f17a94b3ffa589c1df669a7a3b7ce79fda85e6b
Author: dpolivaev <dpolivaev>
Date:   Tue Oct 20 12:32:23 2

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -389,6 +389,9 @@ AddConnectorAction.icon=/images/designer.png
 AddLocalLinkAction.icon=/images/LinkLocal.png
 BackAction.icon=/images/MoveTo_PrevNode.png
 BoldAction.icon=/images/Bold16.png
+TextAlignAction.LEFT.icon=/images/algnLft16.gif
+TextAlignAction.CENTER.icon=/images/algnCtr16.gif
+TextAlignAction.RIGHT.icon=/images/algnRt16.gif
 CenterSelectedNodeAction.icon=/images/CenterSelectedNodeAction.png
 CloudAction.icon=/images/Cloud24.png
 CloudColorAction.icon=/images/Colors24.png
@@ -598,8 +601,6 @@ CopyIDAction.icon=/images/copy_id.png
 EditAction.icon=/images/edit_node.png
 EditLongAction.icon=/images/edit_long_node.png
 EditDetailsAction.icon=/images/edit_details.png
-MaxNodeWidthAction.icon=/images/max_text_width.png
-MinNodeWidthAction.icon=/images/min_node_width.png
 new_map_from_user_templates.icon=/images/new_map_.png
 PrintPreviewAction.icon=/images/print_preview.png
 QuickFilterAction.icon=/images/apply_quick_filter.png
