--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -706,3 +706,5 @@ org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.ask
 #org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.denied
 exported_image_resolution_dpi = 300
 slow_scroll_selected_node=true
+bubble_vertical_margin=3 px
+
