--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -565,7 +565,7 @@ leftToolbarVisible.fullscreen=false
 toolbarVisible=true
 toolbarVisible.fullscreen=false
 fbarVisible.fullscreen=false
-outline_vgap=3 pt
+outline_vgap=6 pt
 outline_hgap=10 pt
 fit_map=USER_DEFINED
 il__enter_confirms_by_default=true
@@ -707,4 +707,4 @@ org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.ask
 exported_image_resolution_dpi = 300
 slow_scroll_selected_node=true
 bubble_vertical_margin=3 px
-
+style_block_gap=24 pt
