Squashed alpha-1.5.0-pre10
commit 2ffedd606fdb362b29866851a30de0c421bb8251
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 3 07:50:32 2015 +0100

    fix columns.mm

commit 5b55735ab950b077b2ae581250075e6a1dc1beb0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 3 07:37:12 2015 +0100

    Add columns.mm and change standard properties

commit 65ed5070823351d6b4deb5127059d4a409718c00
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Nov 3 07:15:03 2015 +0100

    Use combobox for standard template selector

commit 06314aea6055e696ed0d429ef9f6e6327fdadc48
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 2 21:09:22 2015 +0100

    Let root node margins depend on font size as getFont().getSize2D()* pt

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -593,7 +593,7 @@ mail_icon=Mail.png
 executable_icon=Executable.png
 always_load_last_maps=false
 browsemode_initial_map = map.mm
-standard_template=standard.mm
+standard_template=columns.mm
 max_shortened_text_length=100
 
 CopySingleAction.icon=/images/copy_single.png
@@ -613,7 +613,7 @@ menu_file_import.icon=/images/import.png
 ExportAction.icon=/images/export.png
 CloseAction.icon=/images/close.png
 QuitAction.icon=/images/quit.png
-grid_size=6 pt
+grid_size=1 px
 dialog_menubarVisible=true
 dialog_scrollbarsVisible=true
 connector_shape=CUBIC_CURVE
@@ -709,5 +709,5 @@ org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.ask
 #org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.denied
 exported_image_resolution_dpi = 300
 slow_scroll_selected_node=true
-bubble_vertical_margin=3 px
+bubble_vertical_margin=1 px
 style_block_gap=24 pt
