--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -643,6 +643,9 @@ datetime_format=SHORT,SHORT
 number_format=#0.####
 compare_as_number=true
 
+parse_formulas=true
+parse_latex=true
+
 approximate_search_threshold = 0.65
 
 latex_macros=
