Squashed alpha-1.5.1-pre08
commit 2ee819824caa29706842f60eb62773067071d175
Merge: 820e67e 6237c7f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:54:14 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 820e67e6b7fadcdbefbe12fa86bf77f43a530102
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:54:01 2015 +0100

    Fix git revision information

commit 6237c7f1dcfce29c3fc56a867efbb77c93edfaf5
Merge: 26602ab 2f9b65e
Author: Weblate <noreply@weblate.org>
Date:   Sat Nov 28 09:26:44 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 26602ab14808f3506d110148a09edf9708b5859f
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Nov 28 00:01:19 2015 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.9% (1846 of 1847 strings)

commit 2f9b65e0e7e0b34661bc709659a64ffd159216c8
Merge: 5856f76 d060757
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:26:03 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 5856f769f27ef4cbfcf4a45588881dd32123b849
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:25:27 2015 +0100

    Fix text positioning for nodes with sizes smaller than needed

commit 99a90893afd7a037476b3f30fc553f581c4a5b63
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:11:44 2015 +0100

    Fix shape configuration NPE

commit d0607573c147ce7b5b7defc8b81c6a68a4f9b03b
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Sat Nov 28 07:33:41 2015 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1847 of 1847 strings)

commit 9bb95190f7d7df37007c9e894a01a379a12e32bd
Author: ezjerry liao <ezjerry@gmail.com>
Date:   Sat Nov 28 02:00:40 2015 +0100

    Translated using Weblate (Chinese (Taiwan))

    Currently translated at 100.0% (1847 of 1847 strings)

commit c2a54923b4b090461a311720dba45bd96dfef6bf
Author: Pe

--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -211,7 +211,7 @@
 			failifexecutionfails="false" failonerror="false" logError="true"
 			resultproperty="gitresult">
 			<arg value='log'/>
-			<arg value='--pretty=format:git-revision=%h_%an_%ai'/>
+			<arg value='--pretty=format:git-revision=%H %cn %ci'/>
 			<arg value='-n1'/>
 		</exec>
 		<condition property="gitok" value="">
@@ -221,7 +221,6 @@
 
 	<target name="git_version_info" depends="rungit" unless="giterror">
 		<native2ascii src="${build}" dest="${dist}" includes="gitinfo.txt" ext=".properties"/>
-		<replaceregexp file="${dist}/gitinfo.properties" flags="g" byline="false" match="[^\w=-]" replace="" />
 		<property file="${dist}/gitinfo.properties"/>
 		<exec dir="${build}" executable="git" output="${build}/gitinfo.txt" append="true"
             failifexecutionfails="false" failonerror="false" logError="true">
