Squashed alpha-1.5.4-pre01
commit b6bbac855e1c43ddadcf0d2d031f6218496a7f52
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:49:31 2015 +0100

    RemoveAllAlwaysUnfoldedNodeFlagsAction and SetAlwaysUnfoldedNodeFlagsAction should ignore hidden summary nodes

commit 88c75faab4deb39e5334d42449fbcca789eeb0f9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:48:44 2015 +0100

    Do not select summary node children on up and down key selection

commit 139ea1c207efeb7407bc246172d1672d31b34c30
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:48:12 2015 +0100

    Do not select invisible nodes on continious selection

commit d36054bd726cfbf9a2962c48764f43eb8fe6dd15
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:27:54 2015 +0100

    SummaryGroupEdgeListAdderShould not add group begin nodes and summary
    nodes twice

commit ad9b8a51d28d529f4a84981f507f959719425ac3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:08:43 2015 +0100

    Fix SummaryLevels for group begin node

commit b81072334db479f573fe39c7682bd081c65694f9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 11:40:41 2015 +0100

    repaint map if connectors are added / inserted after node deletion
    /insertion

commit b1237b04d74bcfc433ac3aac94fd90334219686f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 10:55:16 2015 +0100

    Save actor and selection in undo buffer before executing

commit e4d608fb8650d1e873227ec2594cd36c20ec8fe0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 09:35:19 2015 +0100

    UITools.errorMessage("unexpected error: node " + getMainView().getText()
    + " has lost its parent ");

commit 51277b032f825b3eacc972261f5efeb6b1215ffa
Merge: 7de1ccc 4793dd4
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Dec 27 21:21:28 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 7de1ccc5cf58080f7fedf34dfd3b2109d0ebe

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -447,7 +447,8 @@ time_for_automatic_save=60000
 time_for_delayed_selection=60
 toolTipManager.dismissDelay=4000
 toolTipManager.initialDelay=750
-toolTipManager.max_tooltip_width=600
+toolTipManager.max_tooltip_width=10000
+toolTipManager.max_tooltip_height=10000
 toolTipManager.reshowDelay=500
 toolbarVisible=true
 toolbarVisible.fullscreen=false
