Squashed alpha-1.5.4-pre02
commit a36e149a9c00787f6676a9e7f113631fb5c058d2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 19:39:04 2015 +0100

    [bugs:#2272] SVG image in Freeplane 1.5.4-alpha-01**

commit 4ab8f07ac26566f46ca4ac4b1c8a3394046eca8a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 18:20:52 2015 +0100

    Fix index for moved nodes also for inserts

commit 2a17ada96096ae59c975fc78142b1efe9c3bd9e1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 18:13:12 2015 +0100

    Do not try to delete node clones twice if multiple clones are selected

commit c97b3da0df0408cbad7de8d8aaed86a0218cb526
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 17:22:33 2015 +0100

    [bugs:#2268] toolbar . font size - too narrow**

commit 58979ea637bc0db747a2a8f3d7f0ca46df86c39f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 16:51:47 2015 +0100

    [bugs:#2271] fix loading and saving accelerator presets

commit e24a5ca171287a6550fd7ea379ba22155aa077a1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 14:37:39 2015 +0100

    Fix NPE if zoom is set before viewer is completely created

commit 5bf2b10811a47c6c0b941ecbea5f75e18316a053
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 14:23:54 2015 +0100

    remove unintended "missing key" logging

commit 7047404814320e63471968138b0427e731c8af68
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Dec 29 14:23:19 2015 +0100

    [bugs:#2269] import all exportet packages to freeplane_script_plugin

commit ca9ef699a348fc48fb4ad386123a3ccebffbdc86
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 23:53:08 2015 +0100

    improve menu structure: move actions to right group

commit fe945b7bc76502a97de90e4511903380510d4f16
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 16:36:30 2015 +0100

    Use simple html 0.16.12 jar from https://bintray.com/freeplane/freeplane

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ allprojects {
     ext.globalBuild = rootDir.path + '/BUILD'
 
     repositories {
+		maven { url "http://dl.bintray.com/freeplane/freeplane" } 
         // this is necessary to grab both binary and source jars
         // for local (git) dependencies
         flatDir name: 'localGitDepsRepository',
