--- a/freeplane/build.gradle
+++ b/freeplane/build.gradle
@@ -1,4 +1,3 @@
-
 dependencies {
     compile project(':JOrtho_0.4_freeplane')
 
@@ -7,7 +6,8 @@ dependencies {
             'commons-codec:commons-codec:1.7',
             'com.jgoodies:jgoodies-forms:1.6.0',
             'com.jgoodies:jgoodies-common:1.4.0',
-            'gnu-regexp:gnu-regexp:1.1.4'
+            'gnu-regexp:gnu-regexp:1.1.4',
+            'com.lightdev.app.shtm.simplyhtml:SimplyHTML:0.16.12'
     
     testCompile 'junit:junit:4.12',
                 'org.hamcrest:hamcrest-all:1.3',
@@ -15,7 +15,6 @@ dependencies {
 
     // from flatDir "localGitDepsRepository":
     compile ':idw-gpl-1.6.1'
-    compile ':SimplyHTML-0.16.11'
 }
 
 sourceSets {
