--- a/freeplane_plugin_script/build.gradle
+++ b/freeplane_plugin_script/build.gradle
@@ -23,21 +23,8 @@ jar {
 
         def imports = """\
                       org.osgi.framework;version="1.3.0",
-                      com.jgoodies.forms.builder,
-                      com.jgoodies.forms.debug,
-                      com.jgoodies.forms.factories,
-                      com.jgoodies.forms.layout,
-                      com.jgoodies.forms.util,
-                      jsyntaxpane.lexers,
-                      jsyntaxpane.syntaxkits,
-                      jsyntaxpane.actions,
-                      org.freeplane.core.*,
-                      org.freeplane.features.*,
-                      org.freeplane.main.*,
-                      org.freeplane.n3.*,
-                      org.freeplane.view.*,
-                      org.apache.commons.lang.*,
-                      org.apache.commons.io.*,
+                      ${project(':freeplane').jar.manifest.attributes.get('Export-Package')},
+                      ${project(':freeplane_plugin_jsyntaxpane').jar.manifest.attributes.get('Export-Package')}
                       """
         instruction 'Import-Package', imports.replaceAll("\\s+", "")
         // avoid that bnd creates Private-Package: for org.freeplane.plugin.script.*!
