--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -468,3 +468,5 @@ wheel_velocity=80
 SplitToWordsAction.nodeNumbersInLine=1, 2, 6, 12
 SplitToWordsAction.leaveOriginalNodeEmpty=true
 SplitToWordsAction.saveOriginalTextAsDetails=true
+copyFormatToNewSibling=false
+scrollOnUnfold=false
