Squashed alpha-1.5.4-pre08
commit a34f0f1115789f8177b2c244609d813d8e5c0e85
Merge: b9f0f35 11e83d8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 20:56:50 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit b9f0f35e2ad83bcb8134cac95ba60dd44593984b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 20:56:34 2016 +0100

    Copyright 2016

commit 841eae1023b83d33b24b69a1fc79c4f257b01934
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 20:54:07 2016 +0100

    Note style

commit 22cc40ae87294ab0f83f9cdcee14fec6ce72387b
Merge: 1086a69 8a4929f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 19:50:19 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 11e83d83244f0a3f4e8fe5f465015d7ee4dd01a4
Merge: b838b74 22cc40a
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 9 19:50:15 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit b838b749a3d6c455fd147fa33bd8dd6e064044f0
Author: k ks <kmshts@naver.com>
Date:   Sat Jan 9 19:48:47 2016 +0100

    Translated using Weblate (Korean)

    Currently translated at 100.0% (1902 of 1902 strings)

commit 1086a69b9affb516ab73b69a016d9c534aa5aa1c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 19:50:08 2016 +0100

    fix java.util.ConcurrentModificationException

commit 8a4929ff9d5f9fbc79dd67c2c7ae57fc01b7656b
Merge: ff09083 6c72ff6
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 9 19:45:51 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit ff090833367b40f68f056850294c5ec375256dee
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Wed Jan 6 15:28:38 2016 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.8% (1899 of 1902 strings)

commit 2c634fd4a719594c40df8ca4c0ac8aef27e1b554
Author: k ks <kmshts@naver.com>
Date:   Sat Jan 9 19:41:08 2016 +0100

    Translated using Weblate (Korean

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -471,3 +471,4 @@ SplitToWordsAction.saveOriginalTextAsDetails=true
 copyFormatToNewSibling=false
 copyFormatToNewSiblingIncludesIcons=false
 scrollOnUnfold=false
+remindersBlink=true
