--- a/freeplane_plugin_openmaps/build.gradle
+++ b/freeplane_plugin_openmaps/build.gradle
@@ -1,7 +1,14 @@
+targetCompatibility='1.7'
+sourceCompatibility='1.7'
+	
+repositories {
+    maven { url "https://josm.openstreetmap.de/nexus/content/groups/public/" }
+}
+
 dependencies {
     compile project(':freeplane')
 
-    compile ':JMapViewer-1.11'
+    compile 'org.openstreetmap.jmapviewer:jmapviewer:1.14'
 }
 
 jar {
@@ -19,7 +26,7 @@ jar {
 
         instruction 'Bundle-Vendor', 'Freeplane Project'
         instruction 'Bundle-Activator', pluginid + ".Activator"
-        instruction 'Bundle-RequiredExecutionEnvironment', 'JavaSE-1.6'
+        instruction 'Bundle-RequiredExecutionEnvironment', 'JavaSE-1.7'
 
         def imports = """\
                       org.osgi.framework;version="1.3.0",
