Squashed beta-1.5.5-pre01
commit 258e64f11659d1df68ad25adecfac0d13aff77ed
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 22:31:05 2016 +0100

    [bugs:#2300] other place in code

commit bb5eaad1e0e4f7cad67270b85effdb1aa4ae83ce
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 22:24:32 2016 +0100

    [bugs:#2300] Fold Status of Sibling Node Prior to Filtering Inhibits
    Mouse-Clicking Folding

commit 5472e13645117bbcfb5a98147048d628864b7eed
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:59:24 2016 +0100

    History

commit 7c57dbeb428474a0378c5fc1092730d18c8b5d5a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:46:45 2016 +0100

    Use even darker blue and green in inline editor

commit e41feacb508aa67adcea00058a1a3009941c0364
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:44:48 2016 +0100

    Version 1.5.5 beta

commit 5730cdc3a4f677d8fdc2f6edc838c6a882fff564
Merge: d684f01 9ed4673
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:38:48 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit d684f012f6a1f3855b8d6d6499af815f3fb41f6d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:38:37 2016 +0100

    Do not try to select hidden nodes on map opening

commit a9515046dd5908a7b63fd2f2b32ee0ba5fbc37c7
Merge: eb6a31d 37e60b5
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:33:44 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 9ed467315d7f5749cb0b8093a7ab5d2bc2c6a84f
Merge: 1eeef5c a951504
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 16 21:33:39 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 1eeef5c298191e1d6ef42d719993bc9537434cf3
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Jan 16 14:27:34 2016 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.8% (1911 

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -443,7 +443,7 @@ style_block_gap=24 pt
 styledialog.cancel.icon=/images/cancel_button.png
 styledialog.ok.icon=/images/ok_button.png
 tabbed_pane.collapsed=false
-time_for_automatic_save=60000
+time_for_automatic_save=60 seconds
 time_for_delayed_selection=60
 toolTipManager.dismissDelay=4000
 toolTipManager.initialDelay=750
@@ -472,3 +472,5 @@ copyFormatToNewSibling=false
 copyFormatToNewSiblingIncludesIcons=false
 scrollOnUnfold=false
 remindersBlink=true
+remindersShowNotifications=true
+remindersStandardDelay=5 minutes
