--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -21,8 +21,8 @@ CommercialUse=true
 EULAVersion=1
 
 [Version]
-PackageVersion=1.5.4.1
-DisplayVersion=1.5.4 alpha
+PackageVersion=1.5.5.1
+DisplayVersion=1.5.5 beta
 
 [SpecialPaths]
 Plugins=NONE
