Squashed alpha-1.5.4-pre11
commit fa6765431c24dd337519c14a9fddab9de59d1826
Merge: b247819 dc008d2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Jan 12 21:27:46 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit b24781943d7ef2be31e45653ad597ea6bf7da567
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Jan 12 21:12:30 2016 +0100

    [bugs:#2298] Conditional Styles do not update attribute list on map
    change

commit f24b794ab7a9cf0dae295600e8115f7246b88e87
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Jan 12 20:57:35 2016 +0100

    Disable quick filter on quick filter button only if condition was not
    changed

commit dc008d25ac502db67912b04c804954a4a91c0a16
Merge: 9ee1e8e 7f7cdf8
Author: Weblate <noreply@weblate.org>
Date:   Mon Jan 11 23:07:19 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 7f7cdf85da2292965e69af1bd63272a0f50badab
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Jan 11 23:07:19 2016 +0100

    Convert line ends to unix for shell scripts

commit 9ee1e8ed6702e7745b3f5734597dbcdd101bcdc1
Author: hokorobi <hokorobi.hokorobi@gmail.com>
Date:   Mon Jan 11 04:32:38 2016 +0100

    Translated using Weblate (Japanese)

    Currently translated at 99.0% (1883 of 1902 strings)

--- a/freeplane_framework/build.gradle
+++ b/freeplane_framework/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.*
+
 task freeplanelauncherJar(type: Jar) {
      archiveName = 'freeplanelauncher.jar'
      destinationDir = new File(globalBuild)
@@ -17,11 +19,17 @@ task freeplanelauncherJar(type: Jar) {
 
 jar.dependsOn freeplanelauncherJar
 
-task copyLauncherStuff(type: Copy) {
+task copyFreeplaneShellScript(type: Copy) {
      from('script/') {
          include('freeplane.sh')
          fileMode = 0755
      }
+	 into(globalBuild)
+	 filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
+}	 
+
+task copyLauncherStuff(type: Copy) {
+	 dependsOn 'copyFreeplaneShellScript'
      from('script/') {
          include('*')
          exclude('freeplane.sh')
