--- a/mac.dist.gradle
+++ b/mac.dist.gradle
@@ -1,4 +1,5 @@
 import org.apache.tools.ant.taskdefs.condition.Os
+import org.apache.tools.ant.filters.*
 
 def appBundlerJar = 'freeplane_framework/mac-appbundler/appbundler-1.0.jar'
 ant.taskdef(
@@ -50,6 +51,7 @@ task macosxapp {
                 fileMode = 0755
             }
             into (maclauncherfullpath)
+			filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
         }
 
         def macjavafullpath = macappfullpath.path + '/Contents/Java'
