Squashed alpha-1.5.4-pre04
commit ccf03aa0cb49fa6ca6da43e3d8080b82ca5d5f30
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 22:49:46 2015 +0100

    history

commit 950e4c6c05421c4eeda3448b95efa2a182c37fc7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 22:47:20 2015 +0100

    Bug fix in ExtensionCopier for icons

commit d5a5aea74c65d962a7c3ad36b216c24d0d690bb0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 22:46:53 2015 +0100

    Optionally copy icons with node format

commit 557757e102385c882bcca89b89117117ee46d9a3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 22:25:30 2015 +0100

    Make copyFormatToNewSibling an action inFormat menu

commit 056e3421e44d3302a66e2492122cb7fd222807c5
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 22:21:56 2015 +0100

    Bug: maps lose focus when using ctrl-tab to navigate between maps

commit 6b82e8ab30f35008597c6be539d96c507b3ace44
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 22:06:32 2015 +0100

    Bug fix for deletion of summary nodes

commit 8c0081637b69e63bdb39b6e1a6fa557646020a32
Merge: 2399b10 eac585d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 16:21:27 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 2399b10ff7e5f96a3ee37ce0b39c1c4a8ad6a642
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 16:21:13 2015 +0100

    change node size on mouse wheel scrolling only if shift or shift+control
    is hold

commit eac585dc7aba2872d4f540f5fa777bb5afe2a6ad
Author: Pedro Albuquerque <palbuquerque73@gmail.com>
Date:   Wed Dec 30 16:16:26 2015 +0100

    Translated using Weblate (Portuguese (Portugal))

    Currently translated at 100.0% (1898 of 1898 strings)

commit a1b37832420429c2ef4ae7b2e402427134cfda68
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Dec 30 15:28:01 2015 +0100

    Apply node width change to all selected nodes

commit 39c90fa3d7c

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -469,4 +469,5 @@ SplitToWordsAction.nodeNumbersInLine=1, 2, 6, 12
 SplitToWordsAction.leaveOriginalNodeEmpty=true
 SplitToWordsAction.saveOriginalTextAsDetails=true
 copyFormatToNewSibling=false
+copyFormatToNewSiblingIncludesIcons=false
 scrollOnUnfold=false
