Squashed alpha-1.5.4-pre10
commit 98a4c2251bc0546602df6935f4cc058232e68953
Merge: f2be107 5682da1
Author: dpolivaev <dpolivaev>
Date:   Sun Jan 10 22:10:32 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit f2be107edea497efe48d128f8b409bd8621f0e20
Author: dpolivaev <dpolivaev>
Date:   Sun Jan 10 22:10:15 2016 +0100

    build settings for mac project

commit 5682da1812adc04bd16fd712d9f62a2700a662f8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 10 21:52:25 2016 +0100

    Include freeplane_mac.jar

commit eefecc03a8b10800dd9d133578ad24b03113f743
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 10 21:48:19 2016 +0100

    Update project version to 1.5

commit 3f3aeaa7fe179c31e5dc39ca257c15a112fb820e
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 10 20:42:21 2016 +0100

    Fix .gitattributes: remove obsolete line

commit 2a9f2a7b6465ee2a8462519c7a9bf8bfd93361a0
Author: dpolivaev <dpolivaev>
Date:   Sun Jan 10 19:45:18 2016 +0100

    fix MacChanges.java but delete freeplane_mac from build

commit 95366c92be8dcd2334ad5b02ce96ebee640769ff
Merge: b7d9f29 dbbc2e5
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Jan 10 13:39:12 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit dbbc2e5eff6d0f4c7652bd0c50ef9b35b1e0d60d
Merge: c8359e6 fe16a39
Author: Weblate <noreply@weblate.org>
Date:   Sun Jan 10 13:23:37 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit c8359e64df1b961275d2bff6c8bd8334a6f6c2a7
Author: k ks <kmshts@naver.com>
Date:   Sat Jan 9 23:18:29 2016 +0100

    Translated using Weblate (Korean)

    Currently translated at 100.0% (1902 of 1902 strings)

--- a/freeplane/build.gradle
+++ b/freeplane/build.gradle
@@ -35,10 +35,10 @@ jar {
         symbolicName = pluginid
 
         def deps = configurations.runtime.files.collect { "lib/${it.name}" }
-        deps.add(0, "lib/freeplaneosgi-" + project.version + ".jar")
+        deps.add(0, "lib/freeplaneosgi-${project.version}.jar")
         // this is built from :freeplane_mac on a Mac!
-        //deps.add(0, "lib/freeplanemac.jar")
-        deps.add(0, "lib/freeplaneeditor-" + project.version + ".jar")
+        deps.add(0, "lib/freeplane_mac-${project.version}.jar")
+        deps.add(0, "lib/freeplaneeditor-${project.version}.jar")
         deps.add(0, "lib/freeplaneviewer.jar")
 
         attributes 'Class-Path' : deps.join(', ')
