--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -475,3 +475,6 @@ remindersBlink=true
 remindersShowNotifications=true
 remindersStandardDelay=5 minutes
 SplitToWordsAction.charactersAcceptedInWord=-
+shouldCenterSmallMaps=true
+indentationUsesTabsInTextOutput=false
+JoinNodesAction.textSeparators={{\\n}} {{ }} {{, }}
