--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -189,8 +189,8 @@ cut_nodes_without_question=true
 cut_out_pictures_when_pasting_html=true
 date_format=SHORT
 datetime_format=SHORT,SHORT
-default_attribute_key_column_width=75
-default_attribute_value_column_width=75
+default_attribute_key_column_width=60 pt
+default_attribute_value_column_width=60 pt
 default_browser_command_mac=open {0}
 default_browser_command_other_os=xdg-open {0}
 default_browser_command_windows_9x=command.com /c start "{0}"
