Squashed beta-1.5.7-pre04
commit fab67339773a98a622670bc92206ec0e92e75170
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 27 15:18:15 2016 +0100

    Write quantities backward compatible when performing export

commit 32f06f95edf32ab70c0c45a8069b737971666c9c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 27 11:21:44 2016 +0100

    Save state of filter parameters showAncestors and showDescendants

commit 63ae7f33c78fbf5d8bd56ada39b75a6ba3dadbaa
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 27 11:01:31 2016 +0100

    [bugs:#2328] Making a connector between a parent & child does not work
    by mouse**

commit 0380930b368c137ca11e526f7ffe190a67e2c42a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 27 10:33:23 2016 +0100

    [bugs:#2329] Focus lost when deleting a node with confirmation option

commit 75baf8a9e13c2d7abe47fd0c0bee972a162b5dcf
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 27 10:23:19 2016 +0100

    Fix NPE if icon name is missed in xml, ignore it

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -478,3 +478,5 @@ SplitToWordsAction.charactersAcceptedInWord=-
 shouldCenterSmallMaps=true
 indentationUsesTabsInTextOutput=false
 JoinNodesAction.textSeparators={{\\n}} {{ }} {{, }}
+filter.showAncestors=true
+filter.showDescendants=false
