--- a/freeplane_framework/build.gradle
+++ b/freeplane_framework/build.gradle
@@ -57,4 +57,12 @@ task copyLauncherStuff(type: Copy) {
      into(globalBuild)
      dependsOn jar
 }
-build.dependsOn copyLauncherStuff
+
+task makeKnopflerfischPermissionDirs << {
+	new File(globalBuild, 'fwdir/perms').mkdirs()
+	new File(globalBuild, 'fwdir/condperm').mkdirs()
+}
+
+build.dependsOn (copyLauncherStuff, makeKnopflerfischPermissionDirs)
+
+
