--- a/freeplane_plugin_script/src/main/java/org/freeplane/plugin/script/defaults.properties
+++ b/freeplane_plugin_script/src/main/java/org/freeplane/plugin/script/defaults.properties
@@ -4,6 +4,6 @@ execute_scripts_without_write_restriction = false
 execute_scripts_without_network_restriction = false
 execute_scripts_without_exec_restriction = false
 signed_script_are_trusted = true
-script_user_key_name_for_signing =
+script_user_key_name_for_signing = FreeplaneScriptKey
 script_directories =
 script_classpath = 
